# galproject

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  GeomAlgoLib.sln  README.md  build.bat  build.sh  external.cmake  launch.json.example  vcpkg.cmake  vcpkg.json
.github/workflows/: cmake.yml
RhinoInterface/: Class1.cs  Extensions.cs  MeshUtil.cs  RhinoInterface.csproj  Test.cs  Unsafe.cs  packages.config
RhinoInterface/Properties/: AssemblyInfo.cs
demos/: boundingCircle.py  boundingSphere.py  boxRandomPoints.py  cgal.py  closestPointsOnMesh.py  convexHull.py  decimate.py  demoUtils.py  glyphs.py  meshPlaneClipping.py  meshSphereQuery.py  meshView.py  meshWithColors.py  overloads.py  perf.py  simplify.py  staticBoundingCircle.py  test.py  textTags.py
galcore/: Annotations.cpp  Box.cpp  CMakeLists.txt  Circle2d.cpp  ConvexHull.cpp  Decimate.cpp  Line.cpp  Mesh.cpp  ObjLoader.cpp  Plane.cpp  PointCloud.cpp  Serialization.cpp  Sphere.cpp  Timer.cpp  Util.cpp
galcore/include/: Annotations.h  Box.h  Circle2d.h  ConvexHull.h  Decimate.h  Line.h  MapMacro.h  Mesh.h  ObjLoader.h  OpenMeshAdaptor.h  Plane.h  PointCloud.h  ProbabilisticQuadrics.h  RTree.h  Serialization.h  Sphere.h  Timer.h  Traits.h  Types.h  Util.h
galfunc/: CMakeLists.txt  CircleFunc.cpp  Data.cpp  Functions.cpp  GeomFunc.cpp  Graph.cpp  LineFunc.cpp  ListFunc.cpp  MathFunc.cpp  MeshFunc.cpp  Property.cpp  SortFunc.cpp  SphereFunc.cpp  TreeFunc.cpp  TypeManager.cpp  UtilFunc.cpp
galfunc/include/: Converter.h  Data.h  Functions.h  Graph.h  MapMacro.h  Property.h  TypeManager.h
galtest/: CMakeLists.txt  DataTest.cpp  GeomTest.cpp  MeshParametrizationTest.cpp  MeshTest.cpp  ObjLoaderTest.cpp  PointCloudTest.cpp  TestUtils.cpp  UtilTest.cpp
galtest/include/: TestUtils.h
galview/: AnnotationsView.cpp  CMakeLists.txt  Command.cpp  Context.cpp  GLUtil.cpp  GuiFunctions.cpp  Interaction.cpp  Views.cpp  main.cpp
galview/include/: AnnotationsView.h  BoxView.h  Circle2dView.h  Command.h  Context.h  GLUtil.h  GuiFunctions.h  Interaction.h  LineView.h  MeshView.h  PlaneView.h  PointCloudView.h  PointView.h  SphereView.h  Views.h
geom_algo_lib/: base.cpp  base.h  convex_hull.cpp  convex_hull.h  cpp.hint  geom_algo_lib.vcxproj  geom_algo_lib.vcxproj.filters  mesh.cpp  mesh.h  rtree.cpp  rtree.h
include/galcore/: Annotations.h  Box.h  Circle2d.h  ConvexHull.h  DebugProfile.h  Line.h  Mesh.h  ObjLoader.h  OpenMeshAdaptor.h  Plane.h  PointCloud.h  RTree.h  Serialization.h  Sphere.h  Timer.h  Traits.h  Types.h  Util.h  base.h  convexhull.h  mesh.h  rtree.h
include/galfunc/: Bindings.h  CircleFunctions.h  Converter.h  Data.h  Dynamic.h  Functions.h  GeomFunctions.h  Graph.h  LineFunctions.h  MeshFunctions.h  Property.h  SphereFunctions.h  TypeHelper.h  TypeManager.h  Types.h  UtilFunctions.h  Variable.h
include/galtest/: TestUtils.h
include/galview/: AllViews.h  AnnotationsView.h  BoxView.h  Camera.h  Circle2dView.h  Command.h  Context.h  DebugGeom.h  GLUtil.h  GuiFunctions.h  Interaction.h  LineView.h  MeshView.h  PlaneView.h  PointCloudView.h  PointView.h  Shader.h  SphereView.h  TextTags.h  Views.h  Widget.h
include/pygalfunc/: Bindings.h
scripts/: debug.py  dtrees.py  galutils.py  meshStatistics.py  setup.py  sphereVertices.py  test.py  testUtil.py  test_combinatorics.py  test_geomFunctions.py  test_listFunctions.py  test_meshFunctions.py  test_treeFunctions.py  test_utilFunctions.py
shaders/: default_f.glsl  default_v.glsl  facet_f.glsl  facet_v.glsl  glyph_f.glsl  mesh_f.glsl  mesh_v.glsl  simple_f.glsl  simple_v.glsl  text_f.glsl  text_v.glsl
src/galcore/: Annotations.cpp  Box.cpp  Circle2d.cpp  ConvexHull.cpp  DebugProfile.cpp  Line.cpp  Mesh.cpp  ObjLoader.cpp  Plane.cpp  PointCloud.cpp  RTree.cpp  Serialization.cpp  Sphere.cpp  Timer.cpp  Util.cpp  base.cpp  convexhull.cpp  mesh.cpp  rtree.cpp
src/galfunc/: Bindings.cpp  CircleFunc.cpp  CircleFunctions.cpp  Data.cpp  Dynamic.cpp  Functions.cpp  GeomFunc.cpp  GeomFunctions.cpp  Graph.cpp  LineFunc.cpp  LineFunctions.cpp  ListFunc.cpp  ListFunctions.cpp  MathFunc.cpp  MathFunctions.cpp  MeshFunc.cpp  MeshFunctions.cpp  Property.cpp  SortFunc.cpp  SphereFunc.cpp  SphereFunctions.cpp  TreeFunc.cpp  TypeManager.cpp  UtilFunc.cpp  UtilFunctions.cpp  Variable.cpp
src/galtest/: DataTest.cpp  FunctionTest.cpp  GeomTest.cpp  MeshFunctionTest.cpp  MeshTest.cpp  ObjLoaderTest.cpp  PointCloudTest.cpp  main.cpp
src/galview/: AnnotationsView.cpp  BoxView.cpp  Camera.cpp  Circle2dView.cpp  Command.cpp  Context.cpp  DebugGeom.cpp  GLUtil.cpp  GuiFunctions.cpp  Interaction.cpp  LineView.cpp  MeshView.cpp  PlaneView.cpp  PointCloudView.cpp  Shader.cpp  SphereView.cpp  TextTags.cpp  Views.cpp  Widget.cpp  main.cpp
src/pygalfunc/: Bindings.cpp
testScripts/: meshStatistics.py
