cmake_minimum_required(VERSION 3.20.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

include(vcpkg.cmake)
project(gal)

if (WIN32)
  add_compile_definitions(_USE_MATH_DEFINES NOMINMAX)
endif()

# Output directories
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/$<CONFIG>)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/$<CONFIG>)

find_package(PythonLibs REQUIRED)
find_package(Python COMPONENTS Interpreter Development)
find_package(pybind11 CONFIG)
find_package(Boost REQUIRED)
if (Boost_FOUND)
    add_compile_definitions(BOOST_UUID_FORCE_AUTO_LINK)
    include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
endif()
find_package(TBB CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
add_compile_definitions(GLM_ENABLE_EXPERIMENTAL)
find_package(glew REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
find_package(freetype CONFIG REQUIRED)
find_package(OpenMesh REQUIRED)
add_compile_definitions(OM_STATIC_BUILD)
# pngpp is a header only library
find_path(PNGPP_INCLUDE_DIRS "png++/color.hpp")
add_compile_definitions(TBB_SUPPRESS_DEPRECATED_MESSAGES)
find_package(spdlog CONFIG REQUIRED)

add_subdirectory(galcore)
add_subdirectory(galfunc)
add_subdirectory(galview)
add_subdirectory(galtest)
